tests/machine/x/ocaml/update_stmt.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenupdate_stmt3413878754/001/update_stmt.ml", line 28, characters 2-8:
28 |   assert ((people = [{ name = "Alice"; age = 17; status = "minor" };{ name = "Bob"; age = 26; status = "adult" };{ name = "Charlie"; age = 19; status = "adult" };{ name = "Diana"; age = 16; status = "minor" }]))
       ^^^^^^
Error: Syntax error
